--- a/public/index.html
+++ b/public/index.html
@@ -12,17 +12,20 @@
     <div id="header">
       <div id="ufo-star">
         <img id="top-logo" src="img/logo.svg">
-        <h3>Star<span class="thin">Fox</span></h3>
+        <div id="strfx">
+          <h3>Star<span class="thin">Fox</span></h3>
+          <p>&nbsp;Intergalactic Travel Agency</p>
+        </div>
       </div>
       <div id="menu">
         <img id="menu-btn" src="img/menu_icon.svg" onclick="toggleMenu()">
       </div>
     </div>
     <div class="hidden" id="menu-items">
-      <div class="menu-item">Home</div>
-      <div class="menu-item">About</div>
-      <div class="menu-item">Services</div>
-      <div class="menu-item">Interstellar Travel</div>
+      <div class="menu-item" id="hm">Home</div>
+      <div class="menu-item" id="abt">About</div>
+      <div class="menu-item" id="svcs">Services</div>
+      <div class="menu-item" id="instl">Interstellar Travel</div>
     </div>
     <div id="info">
       <img id="top-ship" src="img/ship.svg">
@@ -34,7 +37,7 @@
     </div>
   </div>
   <div id="deals">
-    <div class="moon">
+    <div id="thirty-1" class="moon">
       <p class="to-moon">To the Moon</p>
       <hr class="emboss-top">
       <hr class="emboss-bottom">
@@ -42,13 +45,21 @@
       <hr class="underline">
       <p class="thin">Covers travel fare, lodgings, and meals for 3 months in space.</p>
     </div>
-    <div class="moon">
+    <div id="thirty-2" class="moon">
       <p class="to-moon">To the Moon</p>
       <hr class="emboss-top">
       <hr class="emboss-bottom">
       <a class="thin">$30,000</a>
       <hr class="underline">
       <p class="thin">Covers travel fare, lodgings, and meals for 3 months in space.</p>
+    </div>
+    <div id="ten-g" class="moon">
+      <p class="to-moon">Just Around Earth</p>
+      <hr class="emboss-top">
+      <hr class="emboss-bottom">
+      <a class="thin">$10,000</a>
+      <hr class="underline">
+      <p class="thin">Covers travel fare, lodgings, and meals for 2 weeks in space.</p>
     </div>
   </div>
   <div id="more">
