--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,10 @@
     </div>
   </div>
   <div id="more">
+    <p class="more-wide">Just to Jupiter</p>
+    <a class="more-wide">$26,000</a>
+    <p class="more-wide">Center of the Earth</p>
+    <a class="more-wide">$156,000</a>
     <p class="bold">More Deals</p>
     <img id="arrow" src="img/arrow.svg">
   </div>
