doing wide view now

--- a/public/index.html
+++ b/public/index.html
@@ -65,8 +65,12 @@
   <div id="more">
     <p class="more-wide">Just to Jupiter</p>
     <a class="more-wide">$26,000</a>
+    <hr class="emboss-top more-wide">
+    <hr class="emboss-bottom more-wide">
     <p class="more-wide">Center of the Earth</p>
     <a class="more-wide">$156,000</a>
+    <hr class="emboss-top more-wide">
+    <hr class="emboss-bottom more-wide">
     <p class="bold">More Deals</p>
     <img id="arrow" src="img/arrow.svg">
   </div>
